--- a/app/src/main/res/layout/date_cell.xml
+++ b/app/src/main/res/layout/date_cell.xml
@@ -13,7 +13,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
         android:fontFamily="monospace"
-        android:padding="5dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:text="@string/dummy"
         android:textSize="13dp"
         android:textStyle="bold"
