--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fff</color>
-    <color name="colorPrimaryDark">#E9E9E9</color>
-    <color name="colorAccent">#0064DB</color>
+    <color name="colorPrimary">#26ae90</color>
+    <color name="colorPrimaryDark">#1b443b</color>
+    <color name="colorAccent">#b71c1c</color>
 
 
     <color name="white">#FFF</color>
