--- a/app/src/main/res/layout/dialog_events_list.xml
+++ b/app/src/main/res/layout/dialog_events_list.xml
@@ -3,32 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:minWidth="350dp"
-    android:gravity="center_horizontal">
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
         tools:ignore="UselessParent">
+
         <TextView
             android:id="@+id/cell_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:layout_gravity="center_vertical"
-            android:text="@string/cell_date"/>
+            android:text="@string/dummy"
+            android:textSize="20sp" />
+
         <ImageButton
             android:id="@+id/btn_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_event"
             android:layout_gravity="end"
             android:background="@android:color/transparent"
             android:contentDescription="@string/app_name"
-            android:onClick="onNewEventClick"/>
+            android:onClick="onNewEventClick"
+            android:src="@drawable/ic_add_event" />
+
+
     </FrameLayout>
+
 
 </LinearLayout>
