--- a/app/src/main/res/drawable/bg_box_view.xml
+++ b/app/src/main/res/drawable/bg_box_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="0dp" />
+    <corners android:radius="5dp" />
     <stroke android:width="4px" android:color="@color/black"/>
+    <solid android:color="@color/yellow" />
 </shape>
