--- a/app/src/main/res/drawable/bg_interv_method_unchecked_view.xml
+++ b/app/src/main/res/drawable/bg_interv_method_unchecked_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="0dp" />
-    <stroke android:width="4px" android:color="@color/black"/>
+    <corners android:radius="50dp" />
+    <solid android:color="@color/interv_method_unchecked" />
 </shape>
