--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -37,6 +37,37 @@
                 android:maxLines="1" />
         </LinearLayout>
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:gravity="center">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:background="@drawable/clock"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/all_day"
+                android:textColor="@color/black"
+                android:layout_gravity="center|start"
+                android:layout_marginStart="30dp"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:typeface="monospace" />
+
+            <Switch
+                android:id="@+id/all_day_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|end"
+                android:layout_marginEnd="20dp"/>
+
+        </FrameLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,8 +77,9 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
                 android:layout_marginEnd="5dp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:labelFor="@+id/txt_event_start_time"
                 android:text="@string/event_start_time"
                 android:textColor="#000"
@@ -60,7 +92,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:background="@drawable/bg_datetime_view"
                 android:gravity="center"
                 android:padding="5dp"
@@ -87,8 +119,9 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
                 android:layout_marginEnd="5dp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:labelFor="@+id/txt_event_end_time"
                 android:text="@string/event_end_time"
                 android:textColor="#000"
@@ -101,7 +134,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:background="@drawable/bg_datetime_view"
                 android:gravity="center"
                 android:padding="5dp"
@@ -149,7 +182,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <!--Option: Anticipated stress level-->
             <View
@@ -258,12 +291,15 @@
 
                 </LinearLayout>
 
+
                 <LinearLayout
+                    android:id="@+id/layout_to_be_inactive"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -276,6 +312,7 @@
                         android:typeface="monospace" />
 
                     <TextView
+                        android:id="@+id/stressor_positive"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -287,6 +324,7 @@
                         android:textSize="15sp" />
 
                     <TextView
+                        android:id="@+id/stressor_negative"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -298,6 +336,7 @@
                         android:textSize="15sp" />
 
                     <TextView
+                        android:id="@+id/stressor_dont_know"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -308,18 +347,10 @@
                         android:textColor="@color/black"
                         android:textSize="15sp" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
                         android:labelFor="@+id/txt_stress_cause"
                         android:text="What causes you to be stressed?"
                         android:textColor="@color/black"
@@ -332,11 +363,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:paddingStart="3dp"
                         android:background="@drawable/bg_text_input"
                         android:gravity="top"
                         android:inputType="text|textMultiLine"
-                        android:lines="4" />
+                        android:lines="4"
+                        android:paddingTop="5dp"
+                        android:paddingStart="5dp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -350,8 +382,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
                 android:onClick="interVentionsClick"
+                android:padding="20dp"
                 android:text="Interventions"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
@@ -392,7 +424,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center|end"
-                    android:layout_margin="20dp" />
+                    android:layout_marginEnd="20dp"/>
             </FrameLayout>
 
             <!--Option: Evaluation-->
@@ -431,7 +463,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="5dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
             android:orientation="horizontal">
 
             <Button
