--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,6 +159,7 @@
             android:orientation="horizontal"
             android:rowCount="5" />
         <ImageButton
+            android:id="@+id/btn_add_from_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
