--- a/app/src/main/res/layout/dialog_events_list.xml
+++ b/app/src/main/res/layout/dialog_events_list.xml
@@ -23,7 +23,7 @@
             android:textSize="20sp" />
 
         <ImageButton
-            android:id="@+id/btn_add"
+            android:id="@+id/btn_add_from_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
