--- a/app/src/main/res/layout/activity_interventions.xml
+++ b/app/src/main/res/layout/activity_interventions.xml
@@ -4,168 +4,108 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="20dp"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".InterventionsActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/intervention_method"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:typeface="monospace" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="15dp">
+        android:layout_marginTop="15dp">
 
-        <TextView
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/button_self_intervention"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/intervention_method"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:layout_marginEnd="15dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_interv_method_unchecked_view"
+            android:onClick="tabClicked"
+            android:padding="10dp"
+            android:text="@string/self"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/button_systems_intervention"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_interv_method_unchecked_view"
+            android:onClick="tabClicked"
+            android:padding="10dp"
+            android:text="@string/system"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/button_peer_interventions"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/bg_interv_method_unchecked_view"
+            android:onClick="tabClicked"
+            android:padding="10dp"
+            android:text="@string/peer"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/intervention_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_solid_wrap"
+        android:gravity="top"
+        android:hint="@string/self_intervention_hint"
+        android:inputType="textMultiLine"
+        android:maxLength="128"
+        android:maxLines="5"
+        android:padding="10dp"
+        android:paddingTop="5dp"
+        android:visibility="visible" />
+
+    <ScrollView
+        android:id="@+id/intervention_choice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_solid_wrap">
 
         <LinearLayout
+            android:id="@+id/interventions_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
+            android:layout_margin="5dp"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tab_self"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_interv_method_unchecked_view"
-                android:onClick="tabClicked"
-                android:padding="10dp"
-                android:text="@string/self"
-                android:textAlignment="center"
-                android:textColor="@color/black" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                android:text="@string/interventions_list"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:typeface="monospace" />
 
-            <TextView
-                android:id="@+id/tab_system"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="15dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_interv_method_unchecked_view"
-                android:onClick="tabClicked"
-                android:padding="10dp"
-                android:text="@string/system"
-                android:textAlignment="center"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/tab_peer"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/bg_interv_method_unchecked_view"
-                android:onClick="tabClicked"
-                android:padding="10dp"
-                android:text="@string/peer"
-                android:textAlignment="center"
-                android:textColor="@color/black" />
         </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_self"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:labelFor="@+id/self_intervention_txt"
-            android:text="Create an intervention that can mediate your stress"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
-
-        <EditText
-            android:id="@id/self_intervention_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_text_input"
-            android:gravity="top"
-            android:inputType="text|textMultiLine"
-            android:lines="7"
-            android:paddingTop="5dp"
-            android:paddingStart="5dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_system"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="System recommendations for user"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_text_input">
-
-            <LinearLayout
-                android:id="@+id/system_intervention_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-            </LinearLayout>
-        </ScrollView>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_peer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="See and refer other's useful interventions"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_text_input">
-
-            <LinearLayout
-                android:id="@+id/peer_intervention_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"></LinearLayout>
-        </ScrollView>
-
-
-    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
