--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -13,6 +13,53 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/inner_activity_actionbar">
+
+            <TextView
+                android:id="@+id/btn_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:fontFamily="monospace"
+                android:onClick="cancelClick"
+                android:padding="10dp"
+                android:text="@string/cancel"
+                android:textAllCaps="true"
+                android:textColor="@color/inner_activity_action_color"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:gravity="center_horizontal"
+                android:text="@string/event_details"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:typeface="monospace" />
+
+            <TextView
+                android:id="@+id/btn_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:fontFamily="monospace"
+                android:onClick="saveClick"
+                android:padding="10dp"
+                android:text="@string/save"
+                android:textAllCaps="true"
+                android:textColor="@color/inner_activity_action_color"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:gravity="center">
 
@@ -43,11 +90,12 @@
             android:layout_margin="5dp"
             android:gravity="center">
 
-            <ImageButton android:contentDescription="@string/clock_image"
+            <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|start"
-                android:background="@drawable/clock" />
+                android:background="@drawable/clock"
+                android:contentDescription="@string/clock_image" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -153,30 +201,20 @@
                 android:textColor="@color/black" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/btn_more_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/text_more_event_options"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="20dp"
-            android:gravity="center">
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/expand_button"
-                android:onClick="moreOptionsClick"
-                android:src="@drawable/img_more_options" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="5dp"
-                android:onClick="moreOptionsClick"
-                android:text="@string/more"
-                android:textSize="15sp" />
-        </LinearLayout>
+            android:drawablePadding="5dp"
+            android:drawableStart="@drawable/img_more_options"
+            android:gravity="center"
+            android:onClick="moreOptionsClick"
+            android:padding="10dp"
+            android:text="@string/more"
+            android:textSize="15sp" />
 
         <LinearLayout
             android:id="@+id/more_options_layout"
@@ -184,37 +222,24 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <!--Option: Anticipated stress level-->
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:background="@color/bright_grey" />
 
-            <FrameLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="stressLvlMoreClick"
-                    android:padding="20dp"
-                    android:text="@string/anticipated_stress_level"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|end"
-                    android:layout_margin="17dp"
-                    android:background="@android:color/transparent"
-                    android:contentDescription="@string/arrow_down"
-                    android:onClick="stressLvlMoreClick"
-                    android:src="@drawable/arrow_down" />
-            </FrameLayout>
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/arrow_down"
+                android:onClick="expandStressLevelClick"
+                android:padding="20dp"
+                android:text="@string/anticipated_stress_level"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:id="@+id/stress_lvl_more"
@@ -386,7 +411,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="interVentionsClick"
+                android:onClick="interventionsClick"
                 android:padding="20dp"
                 android:text="@string/interventions"
                 android:textColor="@color/black"
@@ -459,41 +484,6 @@
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/eventActionButtonsContainer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btn_save"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:tag="false"
-                android:text="@string/save"
-                android:textColor="#fff"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/btn_cancel"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:background="@color/colorPrimary"
-                android:onClick="cancelClick"
-                android:tag="true"
-                android:text="@string/cancel"
-                android:textColor="#fff"
-                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
