--- a/app/src/main/res/layout/intervention_element.xml
+++ b/app/src/main/res/layout/intervention_element.xml
@@ -4,20 +4,20 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-
-    <TextView
-        android:id="@+id/intervention_text_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/dummy"
-        android:textSize="18sp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:paddingStart="10dp"
-        android:textColor="@color/black"/>
-
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/bright_grey" />
+
+    <TextView
+        android:id="@+id/intervention_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="20dp"
+        android:text="@string/dummy"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 </LinearLayout>
