--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="pink">#ff4081</color>
     <color name="burgundy">#b33</color>
     <color name="yellow">#FFE699</color>
+    <color name="dark_yellow">#FABB37</color>
 
 
     <color name="interv_method_unchecked">#F8CBAC</color>
